# protein_sets

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/: index.html  style.css  vignettes.html
protein_sets/: __init__.py  _cache.py  _config.py  cspa.py  definitions.py  hpa.py  humantfs.py  interpro.py  layout.py  lookup.py  oma.py  regions.py  studies.py  subloc.py  transforms.py  uniprot.py  uniref.py
